# dir2md

./: README.md  dir2md.py  pyproject.toml  test.md  test_input
test_output/src/: gemini_example.py
