[tool.poetry]
name = "dir2md"
version = "0.2.8"
description = ""
authors = ["IsaacBreen <mail@isaacbreen.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fire = "^0.5.0"
funcparserlib = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dir2md = "dir2md:dir2md_cli"
md2dir = "dir2md:md2dir_cli"